--- a/requirements.txt
+++ b/requirements.txt
@@ -1,33 +1,39 @@
 blinker==1.7.0
+certifi==2024.2.2
+charset-normalizer==3.3.2
 click==8.1.7
 colorama==0.4.6
 Flask==3.0.0
 Flask-Cors==4.0.0
-gcloud==0.17.0
+gcloud==0.18.3
 googleapis-common-protos==1.62.0
 httplib2==0.22.0
+idna==3.6
 importlib-metadata==7.0.1
 itsdangerous==2.1.2
 Jinja2==3.1.3
 jws==0.1.3
 MarkupSafe==2.1.3
 numpy==1.24.4
-oauth2client==3.0.0
+oauth2client==4.1.3
 opencv-python==4.9.0.80
+opencv-python-headless==4.9.0.80
 pandas==2.0.3
 protobuf==4.25.2
 pyasn1==0.5.1
 pyasn1-modules==0.3.0
-pycryptodome==3.4.3
+pycryptodome==3.20.0
 pyparsing==3.1.1
 Pyrebase==3.0.27
+Pyrebase4==4.7.1
 python-dateutil==2.8.2
 python-jwt==2.0.1
 pytz==2023.3.post1
-requests==2.11.1
-requests-toolbelt==0.7.0
+requests==2.29.0
+requests-toolbelt==0.10.1
 rsa==4.9
 six==1.16.0
 tzdata==2023.4
+urllib3==1.26.18
 Werkzeug==3.0.1
 zipp==3.17.0
