--- a/requirements.txt
+++ b/requirements.txt
@@ -13,7 +13,7 @@ jws==0.1.3
 MarkupSafe==2.1.3
 numpy==1.24.4
 oauth2client==3.0.0
-opencv-python==4.9.0.80
+opencv-python-headless==4.9.0.80
 pandas==2.0.3
 protobuf==4.25.2
 pyasn1==0.5.1
