--- a/requirements.txt
+++ b/requirements.txt
@@ -15,12 +15,14 @@ numpy==1.24.4
 oauth2client==3.0.0
 opencv-python-headless==4.9.0.80
 pandas==2.0.3
+pillow==10.3.0
 protobuf==4.25.2
 pyasn1==0.5.1
 pyasn1-modules==0.3.0
 pycryptodome==3.4.3
 pyparsing==3.1.1
 Pyrebase==3.0.27
+pytesseract==0.3.10
 python-dateutil==2.8.2
 python-jwt==2.0.1
 pytz==2023.3.post1
