--- a/requirements.txt
+++ b/requirements.txt
@@ -30,6 +30,7 @@ requests==2.11.1
 requests-toolbelt==0.7.0
 rsa==4.9
 six==1.16.0
+tesseract-ocr-data==1.6
 tzdata==2023.4
 Werkzeug==3.0.1
 zipp==3.17.0
