--- a/requirements.txt
+++ b/requirements.txt
@@ -11,6 +11,7 @@ itsdangerous==2.1.2
 Jinja2==3.1.3
 jws==0.1.3
 MarkupSafe==2.1.3
+matplotlib==3.9.0
 numpy==1.24.4
 oauth2client==3.0.0
 opencv-python-headless==4.9.0.80
@@ -30,6 +31,7 @@ requests==2.11.1
 requests-toolbelt==0.7.0
 rsa==4.9
 six==1.16.0
+tensorflow==2.16.1
 tesseract-ocr-data==1.6
 tzdata==2023.4
 Werkzeug==3.0.1
