--- a/requirements.txt
+++ b/requirements.txt
@@ -1,38 +1,49 @@
-blinker==1.7.0
+﻿blinker==1.8.2
+certifi==2024.7.4
+cffi==1.17.0
+charset-normalizer==3.3.2
 click==8.1.7
 colorama==0.4.6
-Flask==3.0.0
-Flask-Cors==4.0.0
+cryptography==43.0.0
+filelock==3.15.4
+Flask==3.0.3
+Flask-Cors==4.0.1
+fsspec==2024.6.1
 gcloud==0.18.3
-googleapis-common-protos==1.62.0
+googleapis-common-protos==1.63.2
 httplib2==0.22.0
-importlib-metadata==7.0.1
-itsdangerous==2.1.2
-Jinja2==3.1.3
-jws==0.1.3
-MarkupSafe==2.1.3
-matplotlib==3.7.5
-numpy==1.24.3
-oauth2client==4.1.2
+huggingface-hub==0.24.6
+idna==3.7
+importlib_metadata==8.4.0
+itsdangerous==2.2.0
+Jinja2==3.1.4
+jwcrypto==1.5.6
+MarkupSafe==2.1.5
+numpy==1.24.4
+oauth2client==4.1.3
 opencv-python-headless==4.9.0.80
-pandas==2.0.3
-pillow==10.3.0
-protobuf==4.25.2
-pyasn1==0.5.1
-pyasn1-modules==0.3.0
-pycryptodome==3.6.4
-pyparsing==3.1.1
+packaging==24.1
+pillow==10.4.0
+protobuf==5.28.0rc3
+pyasn1==0.6.0
+pyasn1_modules==0.4.0
+pycparser==2.22
+pycryptodome==3.20.0
+pyparsing==3.1.2
 Pyrebase4==4.8.0
-pytesseract==0.3.10
-python-dateutil==2.8.2
-python-jwt==2.0.1
-pytz==2023.3.post1
-requests==2.31
-requests-toolbelt==0.7.1
+pytesseract==0.3.13
+python-jwt==4.1.0
+PyYAML==6.0.2
+regex==2024.7.24
+requests==2.32.3
+requests-toolbelt==0.10.1
 rsa==4.9
+safetensors==0.4.4
 six==1.16.0
-tensorflow==2.12.1
-tesseract-ocr-data==1.6
-tzdata==2023.4
-Werkzeug==3.0.1
-zipp==3.17.0
+tokenizers==0.19.1
+tqdm==4.66.5
+transformers==4.44.2
+typing_extensions==4.12.2
+urllib3==1.26.19
+Werkzeug==3.0.4
+zipp==3.20.0
