--- a/requirements.txt
+++ b/requirements.txt
@@ -5,6 +5,7 @@ charset-normalizer==3.3.2
 click==8.1.7
 colorama==0.4.6
 cryptography==43.0.0
+easyocr==1.7.2
 filelock==3.15.4
 Flask==3.0.3
 Flask-Cors==4.0.1
@@ -19,9 +20,9 @@ itsdangerous==2.2.0
 Jinja2==3.1.4
 jwcrypto==1.5.6
 MarkupSafe==2.1.5
-numpy==1.24.4
+numpy==1.24.3
 oauth2client==4.1.3
-opencv-python-headless==4.9.0.80
+opencv-python-headless== 4.10.0.84
 packaging==24.1
 pillow==10.4.0
 protobuf==5.28.0rc3
