--- a/requirements.txt
+++ b/requirements.txt
@@ -41,6 +41,7 @@ requests-toolbelt==0.10.1
 rsa==4.9
 safetensors==0.4.4
 six==1.16.0
+torch==1.12.1
 tokenizers==0.10.3
 tqdm==4.66.5
 typing_extensions==4.12.2
