--- a/.gitattributes
+++ b/.gitattributes
@@ -2,3 +2,4 @@ korean.pth filter=lfs diff=lfs merge=lfs -text
 C:/Users/user/Downloads/korean.pth filter=lfs diff=lfs merge=lfs -text
 C:/Users/user/Desktop/개발/DataBase/korean.pth filter=lfs diff=lfs merge=lfs -text
 C:/Users/user/Desktop/개발/DataBase/korean.pth filter=lfs diff=lfs merge=lfs -text
+C:/Users/user/Desktop/개발/DataBase/korean.pth filter=lfs diff=lfs merge=lfs -text
